# BlueLED

./: .gitignore  CMakeLists.txt  ConnectionDialog.cpp  ConnectionDialog.h  README.md  bluetoothdialog.cpp  bluetoothdialog.h  bluetoothdialog.ui  bluetoothinterface.cpp  bluetoothinterface.h  btdbusinterface.cpp  btdbusinterface.h  daemon.cpp  daemon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: bluetoothdialog.cpp
daemon/: daemon.cpp  main.cpp
